[tool.poetry]
name = "pyomo_decorators"
version = "0.1.0"
description = ""
authors = ["Tom Watson <tom.m.watson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyomo = "^5.6.9"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
